@@ -787,6 +787,66 @@ name|ENABLE_FILE_DUMP_DEFAULT
 init|=
 literal|true
 decl_stmt|;
+DECL|field|MAX_READ_TRANSFER_SIZE_KEY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|MAX_READ_TRANSFER_SIZE_KEY
+init|=
+literal|"dfs.nfs.rtmax"
+decl_stmt|;
+DECL|field|MAX_READ_TRANSFER_SIZE_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|MAX_READ_TRANSFER_SIZE_DEFAULT
+init|=
+literal|1024
+operator|*
+literal|1024
+decl_stmt|;
+DECL|field|MAX_WRITE_TRANSFER_SIZE_KEY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|MAX_WRITE_TRANSFER_SIZE_KEY
+init|=
+literal|"dfs.nfs.wtmax"
+decl_stmt|;
+DECL|field|MAX_WRITE_TRANSFER_SIZE_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|MAX_WRITE_TRANSFER_SIZE_DEFAULT
+init|=
+literal|1024
+operator|*
+literal|1024
+decl_stmt|;
+DECL|field|MAX_READDIR_TRANSFER_SIZE_KEY
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|MAX_READDIR_TRANSFER_SIZE_KEY
+init|=
+literal|"dfs.nfs.dtmax"
+decl_stmt|;
+DECL|field|MAX_READDIR_TRANSFER_SIZE_DEFAULT
+specifier|public
+specifier|static
+specifier|final
+name|int
+name|MAX_READDIR_TRANSFER_SIZE_DEFAULT
+init|=
+literal|64
+operator|*
+literal|1024
+decl_stmt|;
 DECL|field|MAX_OPEN_FILES
 specifier|public
 specifier|static
