@@ -1862,39 +1862,6 @@ operator|.
 name|class
 argument_list|)
 decl_stmt|;
-DECL|field|MAX_READ_TRANSFER_SIZE
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|MAX_READ_TRANSFER_SIZE
-init|=
-literal|64
-operator|*
-literal|1024
-decl_stmt|;
-DECL|field|MAX_WRITE_TRANSFER_SIZE
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|MAX_WRITE_TRANSFER_SIZE
-init|=
-literal|64
-operator|*
-literal|1024
-decl_stmt|;
-DECL|field|MAX_READDIR_TRANSFER_SIZE
-specifier|private
-specifier|static
-specifier|final
-name|int
-name|MAX_READDIR_TRANSFER_SIZE
-init|=
-literal|64
-operator|*
-literal|1024
-decl_stmt|;
 DECL|field|config
 specifier|private
 specifier|final
@@ -4239,9 +4206,25 @@ name|NFS3ERR_SERVERFAULT
 argument_list|)
 return|;
 block|}
+name|int
+name|rtmax
+init|=
+name|config
+operator|.
+name|getInt
+argument_list|(
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_KEY
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_DEFAULT
+argument_list|)
+decl_stmt|;
 if|if
 condition|(
-name|MAX_READ_TRANSFER_SIZE
+name|rtmax
 operator|<
 name|target
 operator|.
@@ -4251,6 +4234,24 @@ operator|.
 name|length
 condition|)
 block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Link size: "
+operator|+
+name|target
+operator|.
+name|getBytes
+argument_list|()
+operator|.
+name|length
+operator|+
+literal|" is larger than max transfer size: "
+operator|+
+name|rtmax
+argument_list|)
+expr_stmt|;
 return|return
 operator|new
 name|READLINK3Response
@@ -4776,13 +4777,29 @@ block|}
 try|try
 block|{
 name|int
+name|rtmax
+init|=
+name|config
+operator|.
+name|getInt
+argument_list|(
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_KEY
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_DEFAULT
+argument_list|)
+decl_stmt|;
+name|int
 name|buffSize
 init|=
 name|Math
 operator|.
 name|min
 argument_list|(
-name|MAX_READ_TRANSFER_SIZE
+name|rtmax
 argument_list|,
 name|count
 argument_list|)
@@ -11195,17 +11212,50 @@ block|{
 name|int
 name|rtmax
 init|=
-name|MAX_READ_TRANSFER_SIZE
+name|config
+operator|.
+name|getInt
+argument_list|(
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_KEY
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|MAX_READ_TRANSFER_SIZE_DEFAULT
+argument_list|)
 decl_stmt|;
 name|int
 name|wtmax
 init|=
-name|MAX_WRITE_TRANSFER_SIZE
+name|config
+operator|.
+name|getInt
+argument_list|(
+name|Nfs3Constant
+operator|.
+name|MAX_WRITE_TRANSFER_SIZE_KEY
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|MAX_WRITE_TRANSFER_SIZE_DEFAULT
+argument_list|)
 decl_stmt|;
 name|int
 name|dtperf
 init|=
-name|MAX_READDIR_TRANSFER_SIZE
+name|config
+operator|.
+name|getInt
+argument_list|(
+name|Nfs3Constant
+operator|.
+name|MAX_READDIR_TRANSFER_SIZE_KEY
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|MAX_READDIR_TRANSFER_SIZE_DEFAULT
+argument_list|)
 decl_stmt|;
 name|Nfs3FileAttributes
 name|attrs
